<?xml version="1.0"?>
<package>
  <name>velocity_smoother</name>
  <version>0.0.0</version>
  <description>The velocity_smoother package</description>

  <maintainer email="lizhi1205@126.com">lizhi</maintainer>

  <license>GPLv2</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

  <export>
  </export>
</package>
